[gd_scene load_steps=6 format=3 uid="uid://5cahp04cxmr"]

[ext_resource type="Script" uid="uid://btf5ljb8narlq" path="res://scripts/components/InputBlock.gd" id="1_mc4yq"]
[ext_resource type="Texture2D" uid="uid://byuqx6b74ycls" path="res://assets/input2.png" id="2_cgse8"]
[ext_resource type="Texture2D" uid="uid://dc46a6uh4xfef" path="res://assets/point.png" id="3_v24r8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_v24r8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1npul"]

[node name="InputBlock" type="Node2D"]
script = ExtResource("1_mc4yq")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_cgse8")

[node name="OutputA" type="Area2D" parent="."]
position = Vector2(-50, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputA"]
position = Vector2(74, -28.999998)
rotation = 0.17453292
scale = Vector2(1.1, 1.1)
shape = SubResource("CircleShape2D_v24r8")

[node name="Sprite2D" type="Sprite2D" parent="OutputA"]
position = Vector2(76, -31)
texture = ExtResource("3_v24r8")

[node name="OutputB" type="Area2D" parent="."]
position = Vector2(50, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OutputB"]
position = Vector2(-25, 27)
rotation = 0.17453292
scale = Vector2(1.1, 1.1)
shape = SubResource("CircleShape2D_1npul")

[node name="Sprite2D" type="Sprite2D" parent="OutputB"]
position = Vector2(-24, 27)
texture = ExtResource("3_v24r8")
